--- a/Tasks/March/Week1/Assignment-4/swaping/Code/index.css
+++ b/Tasks/March/Week1/Assignment-4/swaping/Code/index.css
@@ -10,7 +10,7 @@ body{
     position: absolute;
     top: 27vh;
     left: 41vw;
-    background: linear-gradient(45deg, #1b302b, transparent);
+    background: linear-gradient(45deg, #bb7b3e, transparent);
     border-radius: 2vh;
     padding: 1%;
 }
